@@ -6862,7 +6862,7 @@ TextGetScrollInfoObj(interp, textPtr, objc, objv, dblPtr, intPtr)
 
     arg2 = Tcl_GetStringFromObj(objv[2], &length);
     c = arg2[0];
-    if ((c == 'm') && (strncmp(arg2, "moveto", length) == 0)) {
+    if (c=='m' && strncmp(arg2, "moveto", (unsigned) length)==0) {
 	if (objc != 4) {
 	    Tcl_WrongNumArgs(interp, 2, objv, "moveto fraction");
 	    return TKTEXT_SCROLL_ERROR;
@@ -6871,7 +6871,7 @@ TextGetScrollInfoObj(interp, textPtr, objc, objv, dblPtr, intPtr)
 	    return TKTEXT_SCROLL_ERROR;
 	}
 	return TKTEXT_SCROLL_MOVETO;
-    } else if ((c == 's') && (strncmp(arg2, "scroll", length) == 0)) {
+    } else if (c=='s' && strncmp(arg2, "scroll", (unsigned) length)==0) {
 	CONST char *arg4;
 	size_t argLen;
 	
@@ -6883,22 +6883,22 @@ TextGetScrollInfoObj(interp, textPtr, objc, objv, dblPtr, intPtr)
 	arg4 = Tcl_GetStringFromObj(objv[4], &length);
 	argLen = (size_t) length;
 	c = arg4[0];
-	if ((c == 'p') && (length == 1)) {
+	if (c=='p' && length==1) {
 	    Tcl_AppendResult(interp, "ambiguous argument \"", arg4,
 		    "\": must be units, pages or pixels", (char *) NULL);
 	    return TKTEXT_SCROLL_ERROR;
-	} else if ((c == 'p') && (strncmp(arg4, "pages", argLen) == 0)) {
+	} else if (c=='p' && strncmp(arg4, "pages", argLen)==0) {
 	    if (Tcl_GetIntFromObj(interp, objv[3], intPtr) != TCL_OK) {
 		return TKTEXT_SCROLL_ERROR;
 	    }
 	    return TKTEXT_SCROLL_PAGES;
-	} else if ((c == 'p') && (strncmp(arg4, "pixels", argLen) == 0)) {
+	} else if (c=='p' && strncmp(arg4, "pixels", argLen)==0) {
 	    if (Tk_GetPixelsFromObj(interp, textPtr->tkwin, objv[3], 
 				    intPtr) != TCL_OK) {
 		return TKTEXT_SCROLL_ERROR;
 	    }
 	    return TKTEXT_SCROLL_PIXELS;
-	} else if ((c == 'u') && (strncmp(arg4, "units", argLen) == 0)) {
+	} else if (c=='u' && strncmp(arg4, "units", argLen)==0) {
 	    if (Tcl_GetIntFromObj(interp, objv[3], intPtr) != TCL_OK) {
 		return TKTEXT_SCROLL_ERROR;
 	    }
